--- a/Resources/Private/Partials/Default/Cart/Form/Address/Billing.html
+++ b/Resources/Private/Partials/Default/Cart/Form/Address/Billing.html
@@ -1,6 +1,8 @@
 <div id="billing-address" class="billing-address form-block">
-    <h5 class="form-title"><span class="num">1</span><span><f:translate
-            key="tx_cart_domain_model_order_item.billing_address"/></span></h5>
+    <h5 class="form-title">
+        <span class="num">1</span>
+        <span><f:translate key="tx_cart_domain_model_order_item.billing_address"/></span>
+    </h5>
     <div class="form-content">
         <fieldset>
             <ul class="form-list">
@@ -10,10 +12,11 @@
                             <f:translate key="tx_cart_domain_model_order_address.salutation"/>
                             <em>*</em>
                         </label>
-
                         <div class="input-box">
-                            <f:form.textfield id="billingAddress:salutation" name="billingAddress[salutation]"
-                                              value="{billingAddress.salutation}"/>
+                            <f:form.textfield id="billingAddress:salutation"
+                                              name="billingAddress[salutation]"
+                                              value="{billingAddress.salutation}"
+                                              required="true"/>
                             <f:form.validationResults for="billingAddress">
                                 <f:if condition="{validationResults.flattenedErrors.salutation}">
                                     <span class="validation-error">{validationResults.flattenedErrors.salutation.0.message}</span>
@@ -22,12 +25,12 @@
                         </div>
                     </div>
                     <div class="field title">
-                        <label for="billingAddress:title" class="required">
+                        <label for="billingAddress:title">
                             <f:translate key="tx_cart_domain_model_order_address.title"/>
                         </label>
-
                         <div class="input-box">
-                            <f:form.textfield id="billingAddress:title" name="billingAddress[title]"
+                            <f:form.textfield id="billingAddress:title"
+                                              name="billingAddress[title]"
                                               value="{billingAddress.title}"/>
                         </div>
                     </div>
@@ -36,10 +39,11 @@
                             <f:translate key="tx_cart_domain_model_order_address.first_name"/>
                             <em>*</em>
                         </label>
-
                         <div class="input-box">
-                            <f:form.textfield id="billingAddress:firstName" name="billingAddress[firstName]"
-                                              value="{billingAddress.firstName}"/>
+                            <f:form.textfield id="billingAddress:firstName"
+                                              name="billingAddress[firstName]"
+                                              value="{billingAddress.firstName}"
+                                              required="true"/>
                             <f:form.validationResults for="billingAddress">
                                 <f:if condition="{validationResults.flattenedErrors.firstName}">
                                     <span class="validation-error">{validationResults.flattenedErrors.firstName.0.message}</span>
@@ -52,10 +56,11 @@
                             <f:translate key="tx_cart_domain_model_order_address.last_name"/>
                             <em>*</em>
                         </label>
-
                         <div class="input-box">
-                            <f:form.textfield id="billingAddress:lastName" name="billingAddress[lastName]"
-                                              value="{billingAddress.lastName}"/>
+                            <f:form.textfield id="billingAddress:lastName"
+                                              name="billingAddress[lastName]"
+                                              value="{billingAddress.lastName}"
+                                              required="true"/>
                             <f:form.validationResults for="billingAddress">
                                 <f:if condition="{validationResults.flattenedErrors.lastName}">
                                     <span class="validation-error">{validationResults.flattenedErrors.lastName.0.message}</span>
@@ -69,10 +74,12 @@
                         <f:translate key="tx_cart_domain_model_order_address.email"/>
                         <em>*</em>
                     </label>
-
                     <div class="input-box">
-                        <f:form.textfield id="billingAddress:email" name="billingAddress[email]"
-                                          value="{billingAddress.email}"/>
+                        <f:form.textfield id="billingAddress:email"
+                                          name="billingAddress[email]"
+                                          value="{billingAddress.email}"
+                                          type="email"
+                                          required="true"/>
                         <f:form.validationResults for="billingAddress">
                             <f:if condition="{validationResults.flattenedErrors.email}">
                                 <span class="validation-error">{validationResults.flattenedErrors.email.0.message}</span>
@@ -81,12 +88,12 @@
                     </div>
                 </li>
                 <li>
-                    <label for="billingAddress:company" class="required">
+                    <label for="billingAddress:company">
                         <f:translate key="tx_cart_domain_model_order_address.company"/>
                     </label>
-
                     <div class="input-box">
-                        <f:form.textfield id="billingAddress:company" name="billingAddress[company]"
+                        <f:form.textfield id="billingAddress:company"
+                                          name="billingAddress[company]"
                                           value="{billingAddress.company}"/>
                     </div>
                 </li>
@@ -97,10 +104,11 @@
                                 <f:translate key="tx_cart_domain_model_order_address.street"/>
                                 <em>*</em>
                             </label>
-
                             <div class="input-box">
-                                <f:form.textfield id="billingAddress:street" name="billingAddress[street]"
-                                                  value="{billingAddress.street}"/>
+                                <f:form.textfield id="billingAddress:street"
+                                                  name="billingAddress[street]"
+                                                  value="{billingAddress.street}"
+                                                  required="true"/>
                                 <f:form.validationResults for="billingAddress">
                                     <f:if condition="{validationResults.flattenedErrors.street}">
                                         <span class="validation-error">{validationResults.flattenedErrors.street.0.message}</span>
@@ -116,10 +124,11 @@
                                     <f:translate key="tx_cart_domain_model_order_address.zip"/>
                                     <em>*</em>
                                 </label>
-
                                 <div class="input-box">
-                                    <f:form.textfield id="billingAddress:zip" name="billingAddress[zip]"
-                                                      value="{billingAddress.zip}"/>
+                                    <f:form.textfield id="billingAddress:zip"
+                                                      name="billingAddress[zip]"
+                                                      value="{billingAddress.zip}"
+                                                      required="true"/>
                                     <f:form.validationResults for="billingAddress">
                                         <f:if condition="{validationResults.flattenedErrors.zip}">
                                             <span class="validation-error">{validationResults.flattenedErrors.zip.0.message}</span>
@@ -134,10 +143,11 @@
                                     <f:translate key="tx_cart_domain_model_order_address.city"/>
                                     <em>*</em>
                                 </label>
-
                                 <div class="input-box">
-                                    <f:form.textfield id="billingAddress:city" name="billingAddress[city]"
-                                                      value="{billingAddress.city}"/>
+                                    <f:form.textfield id="billingAddress:city"
+                                                      name="billingAddress[city]"
+                                                      value="{billingAddress.city}"
+                                                      required="true"/>
                                     <f:form.validationResults for="billingAddress">
                                         <f:if condition="{validationResults.flattenedErrors.city}">
                                             <span class="validation-error">{validationResults.flattenedErrors.city.0.message}</span>
@@ -152,9 +162,9 @@
                             <label for="billingAddress:country">
                                 <f:translate key="tx_cart_domain_model_order_address.country"/>
                             </label>
-
                             <div class="input-box">
-                                <f:form.textfield id="billingAddress:country" name="billingAddress[country]"
+                                <f:form.textfield id="billingAddress:country"
+                                                  name="billingAddress[country]"
                                                   value="{billingAddress.country}"/>
                             </div>
                         </div>
