--- a/Resources/Private/Partials/Foundation/Cart/Form/Address/Billing.html
+++ b/Resources/Private/Partials/Foundation/Cart/Form/Address/Billing.html
@@ -1,6 +1,8 @@
 <div id="billing-address" class="billing-address form-block">
-    <h5 class="form-title"><span class="num">1</span><span><f:translate
-            key="tx_cart_domain_model_order_item.billing_address"/></span></h5>
+    <h5 class="form-title">
+        <span class="num num1">1</span>
+        <span><f:translate key="tx_cart_domain_model_order_item.billing_address"/></span>
+    </h5>
     <div class="form-content">
         <fieldset>
             <ul class="form-list">
@@ -8,61 +10,70 @@
                     <div class="field salutation">
                         <label for="billingAddress:salutation" class="required">
                             <f:translate key="tx_cart_domain_model_order_address.salutation"/>
-                            <em>*</em></label>
-
+                            <em>*</em>
+                        </label>
                         <div class="input-box">
-                            <f:form.textfield id="billingAddress:salutation" name="billingAddress[salutation]"
-                                              value="{billingAddress.salutation}"/>
+                            <f:form.textfield id="billingAddress:salutation"
+                                              name="billingAddress[salutation]"
+                                              value="{billingAddress.salutation}"
+                                              required="true"/>
                         </div>
                     </div>
                     <div class="field title">
-                        <label for="billingAddress:title" class="required">
+                        <label for="billingAddress:title">
                             <f:translate key="tx_cart_domain_model_order_address.title"/>
                         </label>
-
                         <div class="input-box">
-                            <f:form.textfield id="billingAddress:title" name="billingAddress[title]"
+                            <f:form.textfield id="billingAddress:title"
+                                              name="billingAddress[title]"
                                               value="{billingAddress.title}"/>
                         </div>
                     </div>
                     <div class="field firstName">
                         <label for="billingAddress:firstName" class="required">
                             <f:translate key="tx_cart_domain_model_order_address.first_name"/>
-                            <em>*</em></label>
-
+                            <em>*</em>
+                        </label>
                         <div class="input-box">
-                            <f:form.textfield id="billingAddress:firstName" name="billingAddress[firstName]"
-                                              value="{billingAddress.firstName}"/>
+                            <f:form.textfield id="billingAddress:firstName"
+                                              name="billingAddress[firstName]"
+                                              value="{billingAddress.firstName}"
+                                              required="true"/>
                         </div>
                     </div>
                     <div class="field lastName">
                         <label for="billingAddress:lastName" class="required">
                             <f:translate key="tx_cart_domain_model_order_address.last_name"/>
-                            <em>*</em></label>
-
+                            <em>*</em>
+                        </label>
                         <div class="input-box">
-                            <f:form.textfield id="billingAddress:lastName" name="billingAddress[lastName]"
-                                              value="{billingAddress.lastName}"/>
+                            <f:form.textfield id="billingAddress:lastName"
+                                              name="billingAddress[lastName]"
+                                              value="{billingAddress.lastName}"
+                                              required="true"/>
                         </div>
                     </div>
                 </li>
                 <li>
                     <label for="billingAddress:email" class="required">
                         <f:translate key="tx_cart_domain_model_order_address.email"/>
-                        <em>*</em></label>
-
+                        <em>*</em>
+                    </label>
                     <div class="input-box">
-                        <f:form.textfield id="billingAddress:email" name="billingAddress[email]"
-                                          value="{billingAddress.email}"/>
+                        <f:form.textfield id="billingAddress:email"
+                                          name="billingAddress[email]"
+                                          value="{billingAddress.email}"
+                                          type="email"
+                                          required="true"/>
                     </div>
                 </li>
                 <li>
-                    <label for="billingAddress:company" class="required">
+                    <label for="billingAddress:company">
                         <f:translate key="tx_cart_domain_model_order_address.company"/>
                     </label>
-
                     <div class="input-box">
-                        <f:form.textfield id="billingAddress:company" name="billingAddress[company]"
+                        <f:form.textfield id="billingAddress:company"
+                                          name="billingAddress[company]"
                                           value="{billingAddress.company}"/>
                     </div>
                 </li>
@@ -71,11 +82,13 @@
                         <div class="small-12 columns">
                             <label for="billingAddress:street" class="required">
                                 <f:translate key="tx_cart_domain_model_order_address.street"/>
-                                <em>*</em></label>
-
+                                <em>*</em>
+                            </label>
                             <div class="input-box">
-                                <f:form.textfield id="billingAddress:street" name="billingAddress[street]"
-                                                  value="{billingAddress.street}"/>
+                                <f:form.textfield id="billingAddress:street"
+                                                  name="billingAddress[street]"
+                                                  value="{billingAddress.street}"
+                                                  required="true"/>
                             </div>
                         </div>
                     </div>
@@ -84,11 +97,13 @@
                             <div class="field">
                                 <label for="billingAddress:zip" class="required">
                                     <f:translate key="tx_cart_domain_model_order_address.zip"/>
-                                    <em>*</em></label>
-
+                                    <em>*</em>
+                                </label>
                                 <div class="input-box">
-                                    <f:form.textfield id="billingAddress:zip" name="billingAddress[zip]"
-                                                      value="{billingAddress.zip}"/>
+                                    <f:form.textfield id="billingAddress:zip"
+                                                      name="billingAddress[zip]"
+                                                      value="{billingAddress.zip}"
+                                                      required="true"/>
                                 </div>
                             </div>
                         </div>
@@ -96,23 +111,25 @@
                             <div class="field">
                                 <label for="billingAddress:city" class="required">
                                     <f:translate key="tx_cart_domain_model_order_address.city"/>
-                                    <em>*</em></label>
-
+                                    <em>*</em>
+                                </label>
                                 <div class="input-box">
-                                    <f:form.textfield id="billingAddress:city" name="billingAddress[city]"
-                                                      value="{billingAddress.city}"/>
+                                    <f:form.textfield id="billingAddress:city"
+                                                      name="billingAddress[city]"
+                                                      value="{billingAddress.city}"
+                                                      required="true"/>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="small-12 columns">
-                            <label for="billingAddress:country" class="required">
+                            <label for="billingAddress:country">
                                 <f:translate key="tx_cart_domain_model_order_address.country"/>
-                                <em>*</em></label>
-
+                            </label>
                             <div class="input-box">
-                                <f:form.textfield id="billingAddress:country" name="billingAddress[country]"
+                                <f:form.textfield id="billingAddress:country"
+                                                  name="billingAddress[country]"
                                                   value="{billingAddress.country}"/>
                             </div>
                         </div>
