--- a/Resources/Private/Partials/Foundation/Cart/Form/Address/Shipping.html
+++ b/Resources/Private/Partials/Foundation/Cart/Form/Address/Shipping.html
@@ -1,5 +1,7 @@
 <div id="shipping-address" class="form-block">
-    <h5 class="form-title"><span><f:translate key="tx_cart_domain_model_order_item.shipping_address"/></span></h5>
+    <h5 class="form-title">
+        <span><f:translate key="tx_cart_domain_model_order_item.shipping_address"/></span>
+    </h5>
     <div class="form-content">
         <fieldset>
             <ul class="form-list">
@@ -7,61 +9,70 @@
                     <div class="field salutation">
                         <label for="shippingAddress:salutation" class="required">
                             <f:translate key="tx_cart_domain_model_order_address.salutation"/>
-                            <em>*</em></label>
-
+                            <em>*</em>
+                        </label>
                         <div class="input-box">
-                            <f:form.textfield id="shippingAddress:salutation" name="shippingAddress[salutation]"
-                                              value="{shippingAddress.salutation}"/>
+                            <f:form.textfield id="shippingAddress:salutation"
+                                              name="shippingAddress[salutation]"
+                                              value="{shippingAddress.salutation}"
+                                              data="{required:'true'}"/>
                         </div>
                     </div>
                     <div class="field title">
-                        <label for="shippingAddress:title" class="required">
+                        <label for="shippingAddress:title">
                             <f:translate key="tx_cart_domain_model_order_address.title"/>
                         </label>
-
                         <div class="input-box">
-                            <f:form.textfield id="shippingAddress:title" name="shippingAddress[title]"
+                            <f:form.textfield id="shippingAddress:title"
+                                              name="shippingAddress[title]"
                                               value="{shippingAddress.title}"/>
                         </div>
                     </div>
                     <div class="field firstName">
                         <label for="shippingAddress:firstName" class="required">
                             <f:translate key="tx_cart_domain_model_order_address.first_name"/>
-                            <em>*</em></label>
-
+                            <em>*</em>
+                        </label>
                         <div class="input-box">
-                            <f:form.textfield id="shippingAddress:firstName" name="shippingAddress[firstName]"
-                                              value="{shippingAddress.firstName}"/>
+                            <f:form.textfield id="shippingAddress:firstName"
+                                              name="shippingAddress[firstName]"
+                                              value="{shippingAddress.firstName}"
+                                              data="{required:'true'}"/>
                         </div>
                     </div>
                     <div class="field lastName">
-                        <label for="shippingAddress:lastName" class="required">
+                        <label for="shippingAddress:lastName"class="required">
                             <f:translate key="tx_cart_domain_model_order_address.last_name"/>
-                            <em>*</em></label>
-
+                            <em>*</em>
+                        </label>
                         <div class="input-box">
-                            <f:form.textfield id="shippingAddress:lastName" name="shippingAddress[lastName]"
-                                              value="{shippingAddress.lastName}"/>
+                            <f:form.textfield id="shippingAddress:lastName"
+                                              name="shippingAddress[lastName]"
+                                              value="{shippingAddress.lastName}"
+                                              data="{required:'true'}"/>
                         </div>
                     </div>
                 </li>
                 <li>
                     <label for="shippingAddress:email" class="required">
                         <f:translate key="tx_cart_domain_model_order_address.email"/>
-                        <em>*</em></label>
-
+                        <em>*</em>
+                    </label>
                     <div class="input-box">
-                        <f:form.textfield id="shippingAddress:email" name="shippingAddress[email]"
-                                          value="{shippingAddress.email}"/>
+                        <f:form.textfield id="shippingAddress:email"
+                                          name="shippingAddress[email]"
+                                          value="{shippingAddress.email}"
+                                          type="email"
+                                          data="{required:'true'}"/>
                     </div>
                 </li>
                 <li>
-                    <label for="shippingAddress:company" class="required">
+                    <label for="shippingAddress:company">
                         <f:translate key="tx_cart_domain_model_order_address.company"/>
                     </label>
-
                     <div class="input-box">
-                        <f:form.textfield id="shippingAddress:company" name="shippingAddress[company]"
+                        <f:form.textfield id="shippingAddress:company"
+                                          name="shippingAddress[company]"
                                           value="{shippingAddress.company}"/>
                     </div>
                 </li>
@@ -70,11 +81,13 @@
                         <div class="small-12 columns">
                             <label for="shippingAddress:street" class="required">
                                 <f:translate key="tx_cart_domain_model_order_address.street"/>
-                                <em>*</em></label>
-
+                                <em>*</em>
+                            </label>
                             <div class="input-box">
-                                <f:form.textfield id="shippingAddress:street" name="shippingAddress[street]"
-                                                  value="{shippingAddress.street}"/>
+                                <f:form.textfield id="shippingAddress:street"
+                                                  name="shippingAddress[street]"
+                                                  value="{shippingAddress.street}"
+                                                  data="{required:'true'}"/>
                             </div>
                         </div>
                     </div>
@@ -83,11 +96,13 @@
                             <div class="field">
                                 <label for="shippingAddress:zip" class="required">
                                     <f:translate key="tx_cart_domain_model_order_address.zip"/>
-                                    <em>*</em></label>
-
+                                    <em>*</em>
+                                </label>
                                 <div class="input-box">
-                                    <f:form.textfield id="shippingAddress:zip" name="shippingAddress[zip]"
-                                                      value="{shippingAddress.zip}"/>
+                                    <f:form.textfield id="shippingAddress:zip"
+                                                      name="shippingAddress[zip]"
+                                                      value="{shippingAddress.zip}"
+                                                      data="{required:'true'}"/>
                                 </div>
                             </div>
                         </div>
@@ -95,23 +110,25 @@
                             <div class="field">
                                 <label for="shippingAddress:city" class="required">
                                     <f:translate key="tx_cart_domain_model_order_address.city"/>
-                                    <em>*</em></label>
-
+                                    <em>*</em>
+                                </label>
                                 <div class="input-box">
-                                    <f:form.textfield id="shippingAddress:city" name="shippingAddress[city]"
-                                                      value="{shippingAddress.city}"/>
+                                    <f:form.textfield id="shippingAddress:city"
+                                                      name="shippingAddress[city]"
+                                                      value="{shippingAddress.city}"
+                                                      data="{required:'true'}"/>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="small-12 columns">
-                            <label for="shippingAddress:country" class="required">
+                            <label for="shippingAddress:country">
                                 <f:translate key="tx_cart_domain_model_order_address.country"/>
-                                <em>*</em></label>
-
+                            </label>
                             <div class="input-box">
-                                <f:form.textfield id="shippingAddress:country" name="shippingAddress[country]"
+                                <f:form.textfield id="shippingAddress:country"
+                                                  name="shippingAddress[country]"
                                                   value="{shippingAddress.country}"/>
                             </div>
                         </div>
