--- a/Resources/Private/Partials/Default/Mail/Address.html
+++ b/Resources/Private/Partials/Default/Mail/Address.html
@@ -11,6 +11,8 @@
             <f:if condition="{billingAddress.country}">
                 {billingAddress.country}<br />
             </f:if>
+            <br />
+            {billingAddress.email}
         </td>
         <td style="width:300px;vertical-align:top;">
             <b><f:translate key="tx_cart_domain_model_cart.shipping_address" />:</b><br />
@@ -25,6 +27,8 @@
                     <f:if condition="{shippingAddress.country}">
                         {shippingAddress.country}<br />
                     </f:if>
+                    <br />
+                    {shippingAddress.email}
                 </f:then>
                 <f:else>
                     <f:translate key="tx_cart_domain_model_cart.use_billing_address" /><br /><br />
