--- a/Resources/Private/Partials/Default/Mail/Summary.html
+++ b/Resources/Private/Partials/Default/Mail/Summary.html
@@ -50,6 +50,31 @@
 
 <f:render partial="Mail/TaxList" arguments="{taxes: cart.serviceTaxes}"/>
 
+<f:if condition="{cart.couponGross} > 0">
+    <tr>
+        <td colspan="4" style="text-align: right;">
+            <f:translate key="tx_cart_domain_model_order_product.coupon_net"/>
+        </td>
+        <td style="text-align: right;" class="last">
+            <span class="price">
+                <cart:format.currency>-{cart.couponNet}</cart:format.currency>
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="4" style="text-align: right;">
+            <f:translate key="tx_cart_domain_model_order_product.coupon_gross"/>
+        </td>
+        <td style="text-align: right;" class="last">
+            <span class="price">
+                <cart:format.currency>-{cart.couponGross}</cart:format.currency>
+            </span>
+        </td>
+    </tr>
+
+    <f:render partial="Mail/TaxList" arguments="{taxes: cart.couponTaxes, type: 'coupon'}"/>
+</f:if>
+
 <tr>
     <td colspan="4" style="text-align: right;">
         <f:translate
