--- a/Resources/Private/Partials/Default/Cart/Form/Cart.html
+++ b/Resources/Private/Partials/Default/Cart/Form/Cart.html
@@ -7,10 +7,12 @@
                 <li class="fields">
                     <div class="field acceptTerms">
                         <label>
-                            <f:form.checkbox id="orderItem:acceptTerms"
-                                             name="orderItem[acceptTerms]"
-                                             title="{f:translate(key:'tx_cart_domain_model_order_item.accept_terms')}"
-                                             value="1"/>
+                            <f:if condition="{0: settings.showCartAction.validation.fields.acceptTerms} == {0: 'true'}">
+                                <f:form.checkbox id="orderItem:acceptTerms"
+                                                 name="orderItem[acceptTerms]"
+                                                 title="{f:translate(key:'tx_cart_domain_model_order_item.accept_terms')}"
+                                                 value="1"/>
+                            </f:if>
                             <span>
                                 <f:translate key="tx_cart_domain_model_order_item.accept_terms"/>
                             </span>
@@ -25,10 +27,12 @@
                     </div>
                     <div class="field acceptTerms">
                         <label>
-                            <f:form.checkbox id="orderItem:acceptConditions"
-                                             name="orderItem[acceptConditions]"
-                                             title="{f:translate(key:'tx_cart_domain_model_order_item.accept_conditions')}"
-                                             value="1"/>
+                            <f:if condition="{0: settings.showCartAction.validation.fields.acceptConditions} == {0: 'true'}">
+                                <f:form.checkbox id="orderItem:acceptConditions"
+                                                 name="orderItem[acceptConditions]"
+                                                 title="{f:translate(key:'tx_cart_domain_model_order_item.accept_conditions')}"
+                                                 value="1"/>
+                            </f:if>
                             <span>
                                 <f:translate key="tx_cart_domain_model_order_item.accept_conditions"/>
                             </span>
