[TASK] #1187 - show price for selected beVariant in detail page

--- a/Resources/Private/Partials/Default/Product/CartForm.html
+++ b/Resources/Private/Partials/Default/Product/CartForm.html
@@ -12,7 +12,7 @@
         <input type="hidden" value="{product.uid}" name="tx_cart_cart[productId]">
         <input type="text" value="1" name="tx_cart_cart[quantity]">
         <f:if condition="{product.beVariants}">
-            <cart:form.variantSelect name="tx_cart_cart[beVariants][1]" product="{product}"/>
+            <cart:form.variantSelect id="be-variants-select" name="tx_cart_cart[beVariants][1]" product="{product}"/>
         </f:if>
         <f:if condition="{product.feVariants}">
             <f:for each="{product.feVariants}" as="feVariant">
