--- a/Resources/Private/Templates/Default/Product/Show.html
+++ b/Resources/Private/Templates/Default/Product/Show.html
@@ -60,7 +60,7 @@
         <f:render partial="Product/CartForm" arguments="{product: product, pid: settings.cart.pid}"/>
     </f:if>
 
-    <div>
+    <div id="product-price">
         <f:render partial="Product/Price" arguments="{product: product, settings: settings}"></f:render>
     </div>
 
