--- a/Resources/Private/Partials/Default/Cart/Summary.html
+++ b/Resources/Private/Partials/Default/Cart/Summary.html
@@ -1,95 +1,115 @@
 {namespace cart=Extcode\Cart\ViewHelpers}
 
-<tr class="first">
-    <td colspan="3" class="a-right">
-        <f:translate key="tx_cart_domain_model_order_product.cart_net"/>
-    </td>
-    <td class="a-right last">
-        <span class="price">
-            <cart:format.currency>{cart.net}</cart:format.currency>
-        </span>
-    </td>
-</tr>
-<tr>
-    <td colspan="3" class="a-right">
-        <f:translate key="tx_cart_domain_model_order_product.cart_gross"/>
-    </td>
-    <td class="a-right last">
-        <span class="price">
-            <cart:format.currency>{cart.gross}</cart:format.currency>
-        </span>
-    </td>
-</tr>
-
-<f:render partial="Cart/TaxList" arguments="{taxes: cart.taxes}"/>
-
-<tr>
-    <td colspan="3" class="a-right">
-        <f:translate key="tx_cart_domain_model_order_product.service_net"/>
-    </td>
-    <td class="a-right last">
-        <span class="price">
-            <cart:format.currency>{cart.serviceNet}</cart:format.currency>
-        </span>
-    </td>
-</tr>
-<tr>
-    <td colspan="3" class="a-right">
-        <f:translate key="tx_cart_domain_model_order_product.service_gross"/>
-    </td>
-    <td class="a-right last">
-        <span class="price">
-            <cart:format.currency>{cart.serviceGross}</cart:format.currency>
-        </span>
-    </td>
-</tr>
-
-<f:render partial="Cart/TaxList" arguments="{taxes: cart.serviceTaxes}"/>
-
-<f:if condition="{cart.couponGross} > 0">
-    <tr>
+<f:if condition="{settings.showCartAction.summary.fields.cart.net}">
+    <tr class="first">
         <td colspan="3" class="a-right">
-            <f:translate key="tx_cart_domain_model_order_product.coupon_net"/>
+            <f:translate key="tx_cart_domain_model_order_product.cart_net"/>
         </td>
         <td class="a-right last">
             <span class="price">
-                <cart:format.currency>-{cart.couponNet}</cart:format.currency>
+                <cart:format.currency>{cart.net}</cart:format.currency>
             </span>
         </td>
     </tr>
+</f:if>
+<f:if condition="{settings.showCartAction.summary.fields.cart.gross}">
     <tr>
         <td colspan="3" class="a-right">
-            <f:translate key="tx_cart_domain_model_order_product.coupon_gross"/>
+            <f:translate key="tx_cart_domain_model_order_product.cart_gross"/>
         </td>
         <td class="a-right last">
             <span class="price">
-                <cart:format.currency>-{cart.couponGross}</cart:format.currency>
+                <cart:format.currency>{cart.gross}</cart:format.currency>
             </span>
         </td>
     </tr>
-
-    <f:render partial="Cart/TaxList" arguments="{taxes: cart.couponTaxes, type: 'coupon'}"/>
+</f:if>
+<f:if condition="{settings.showCartAction.summary.fields.cart.taxes}">
+    <f:render partial="Cart/TaxList" arguments="{taxClasses: cart.taxClasses, taxes: cart.taxes}"/>
 </f:if>
 
-<tr>
-    <td colspan="3" class="a-right">
-        <f:translate key="tx_cart_domain_model_order_product.total_net"/>
-    </td>
-    <td class="a-right last">
-        <span class="price">
-            <cart:format.currency>{cart.totalNet}</cart:format.currency>
-        </span>
-    </td>
-</tr>
-<tr>
-    <td colspan="3" class="a-right">
-        <f:translate key="tx_cart_domain_model_order_product.total_gross"/>
-    </td>
-    <td class="a-right last">
-        <span class="price">
-            <cart:format.currency>{cart.totalGross}</cart:format.currency>
-        </span>
-    </td>
-</tr>
+<f:if condition="{cart.discountGross}">
+    <f:if condition="{settings.showCartAction.summary.fields.discount.net}">
+        <tr>
+            <td colspan="3" class="a-right">
+                <f:translate key="tx_cart_domain_model_order_product.discount_net"/>
+            </td>
+            <td class="a-right last">
+                <span class="price">
+                    <cart:format.currency>{cart.discountNet}</cart:format.currency>
+                </span>
+            </td>
+        </tr>
+    </f:if>
+    <f:if condition="{settings.showCartAction.summary.fields.discount.gross}">
+        <tr>
+            <td colspan="3" class="a-right">
+                <f:translate key="tx_cart_domain_model_order_product.discount_gross"/>
+            </td>
+            <td class="a-right last">
+                <span class="price">
+                    <cart:format.currency>{cart.discountGross}</cart:format.currency>
+                </span>
+            </td>
+        </tr>
+    </f:if>
+    <f:if condition="{settings.showCartAction.summary.fields.discount.taxes}">
+        <f:render partial="Cart/TaxList" arguments="{taxClasses: cart.taxClasses, taxes: cart.discountTaxes}"/>
+    </f:if>
+</f:if>
 
-<f:render partial="Cart/TaxList" arguments="{taxes: cart.totalTaxes}"/>
+<f:if condition="{settings.showCartAction.summary.fields.service.net}">
+    <tr>
+        <td colspan="3" class="a-right">
+            <f:translate key="tx_cart_domain_model_order_product.service_net"/>
+        </td>
+        <td class="a-right last">
+            <span class="price">
+                <cart:format.currency>{cart.serviceNet}</cart:format.currency>
+            </span>
+        </td>
+    </tr>
+</f:if>
+<f:if condition="{settings.showCartAction.summary.fields.service.gross}">
+    <tr>
+        <td colspan="3" class="a-right">
+            <f:translate key="tx_cart_domain_model_order_product.service_gross"/>
+        </td>
+        <td class="a-right last">
+            <span class="price">
+                <cart:format.currency>{cart.serviceGross}</cart:format.currency>
+            </span>
+        </td>
+    </tr>
+</f:if>
+<f:if condition="{settings.showCartAction.summary.fields.service.taxes}">
+    <f:render partial="Cart/TaxList" arguments="{taxClasses: cart.taxClasses, taxes: cart.serviceTaxes}"/>
+</f:if>
+
+<f:if condition="{settings.showCartAction.summary.fields.total.net}">
+    <tr>
+        <td colspan="3" class="a-right">
+            <f:translate key="tx_cart_domain_model_order_product.total_net"/>
+        </td>
+        <td class="a-right last">
+            <span class="price">
+                <cart:format.currency>{cart.totalNet}</cart:format.currency>
+            </span>
+        </td>
+    </tr>
+</f:if>
+<f:if condition="{settings.showCartAction.summary.fields.total.gross}">
+    <tr>
+        <td colspan="3" class="a-right">
+            <f:translate key="tx_cart_domain_model_order_product.total_gross"/>
+        </td>
+        <td class="a-right last">
+            <span class="price">
+                <cart:format.currency>{cart.totalGross}</cart:format.currency>
+            </span>
+        </td>
+    </tr>
+</f:if>
+<f:if condition="{settings.showCartAction.summary.fields.total.taxes}">
+    <f:render partial="Cart/TaxList" arguments="{taxClasses: cart.taxClasses, taxes: cart.totalTaxes}"/>
+</f:if>
