[TASK] #1191 - add translations

--- a/Resources/Private/Partials/Bootstrap/Cart/Form/Address/Billing.html
+++ b/Resources/Private/Partials/Bootstrap/Cart/Form/Address/Billing.html
@@ -1,6 +1,6 @@
 <div class="block-title">
     <span class="num num1">1</span>
-    <span><f:translate key="tx_cart_domain_model_order_item.billing_address"/></span>
+    <span><f:translate key="tx_cart.controller.order.action.show_cart.block-header.billing_address"/></span>
 </div>
 <div>
     <div class="field salutation">
