--- a/Resources/Private/Partials/Bootstrap/Cart/Form/Address/Shipping.html
+++ b/Resources/Private/Partials/Bootstrap/Cart/Form/Address/Shipping.html
@@ -1,5 +1,5 @@
 <div class="block-title">
-    <span><f:translate key="tx_cart_domain_model_order_item.shipping_address"/></span>
+    <span><f:translate key="tx_cart.controller.order.action.show_cart.block-header.shipping_address"/></span>
 </div>
 <div>
     <div class="field salutation">
