--- a/Resources/Private/Partials/Bootstrap/Cart/Form/Cart.html
+++ b/Resources/Private/Partials/Bootstrap/Cart/Form/Cart.html
@@ -1,6 +1,8 @@
-<div class="block-title"><span class="num num4">4</span><span>Kassenübersicht</span></div>
+<div class="block-title">
+    <span class="num num4">4</span>
+    <f:translate key="tx_cart.controller.order.action.show_cart.block-header.order_overview"/>
+</div>
 <div>
-
     <div class="field acceptTerms">
         <div class="input-box">
             <f:if condition="{0: settings.showCartAction.validation.fields.acceptTerms} == {0: 'true'}">
