--- a/Resources/Private/Partials/Bootstrap/Cart/Form/PaymentMethod.html
+++ b/Resources/Private/Partials/Bootstrap/Cart/Form/PaymentMethod.html
@@ -1,4 +1,7 @@
-<div class="block-title"><span class="num num3">3</span><span>Zahlart</span></div>
+<div class="block-title">
+    <span class="num num3">3</span>
+    <span><f:translate key="tx_cart.controller.order.action.show_cart.block-header.payment_method"/></span>
+</div>
 <div>
     <f:for each="{payments}" as="payment">
         <div>
