--- a/Resources/Private/Partials/Bootstrap/Cart/Form/ShippingMethod.html
+++ b/Resources/Private/Partials/Bootstrap/Cart/Form/ShippingMethod.html
@@ -1,4 +1,7 @@
-<div class="block-title"><span class="num num2">2</span><span>Versandart</span></div>
+<div class="block-title">
+    <span class="num num2">2</span>
+    <span><f:translate key="tx_cart.controller.order.action.show_cart.block-header.shipping_method"/></span>
+</div>
 <div>
     <f:for each="{shippings}" as="shipping">
         <div>
