--- a/Resources/Private/Partials/Default/Cart/Form/Address/Shipping.html
+++ b/Resources/Private/Partials/Default/Cart/Form/Address/Shipping.html
@@ -1,6 +1,6 @@
 <div id="shipping-address" class="form-block" style="display: none;">
     <h5 class="form-title">
-        <span><f:translate key="tx_cart_domain_model_order_item.shipping_address"/></span>
+        <span><f:translate key="tx_cart.controller.order.action.show_cart.block-header.shipping_address"/></span>
     </h5>
     <div class="form-content">
         <fieldset>
