--- a/Resources/Private/Partials/Foundation/Cart/Form/Address/Billing.html
+++ b/Resources/Private/Partials/Foundation/Cart/Form/Address/Billing.html
@@ -1,7 +1,7 @@
 <div id="billing-address" class="billing-address form-block">
     <h5 class="form-title">
         <span class="num num1">1</span>
-        <span><f:translate key="tx_cart_domain_model_order_item.billing_address"/></span>
+        <span><f:translate key="tx_cart.controller.order.action.show_cart.block-header.billing_address"/></span>
     </h5>
     <div class="form-content">
         <fieldset>
