--- a/Resources/Private/Partials/Foundation/Cart/Form/Cart.html
+++ b/Resources/Private/Partials/Foundation/Cart/Form/Cart.html
@@ -1,6 +1,8 @@
 <div id="checkout-review" class="form-block">
-    <h5 class="form-title"><span class="num">4</span><span>Bestellübersicht</span></h5>
-
+    <h5 class="form-title">
+        <span class="num">4</span>
+        <f:translate key="tx_cart.controller.order.action.show_cart.block-header.order_overview"/>
+    </h5>
     <div class="form-content">
         <fieldset>
             <ul class="form-list">
