--- a/Resources/Private/Templates/Default/Cart/OrderCart.html
+++ b/Resources/Private/Templates/Default/Cart/OrderCart.html
@@ -2,6 +2,6 @@
 
 <f:section name="main">
     <div class="small-12 medium-12 large-12">
-        Thank you for your order.
+        <f:translate key="tx_cart.controller.order.action.order_cart.thank_you"/>
     </div>
 </f:section>
