--- a/Resources/Private/Partials/Default/Cart/Form/PaymentMethod.html
+++ b/Resources/Private/Partials/Default/Cart/Form/PaymentMethod.html
@@ -1,8 +1,10 @@
 {namespace cart=Extcode\Cart\ViewHelpers}
 
 <div id="payment-method" class="form-block">
-    <h5 class="form-title"><span class="num">2</span><span>Versandart </span></h5>
-
+    <h5 class="form-title">
+        <span class="num">3</span>
+        <span><f:translate key="tx_cart.controller.order.action.show_cart.block-header.payment_method"/></span>
+    </h5>
     <div class="form-content">
         <fieldset>
             <dl class="sp-methods">
