--- a/Resources/Private/Partials/Foundation/Cart/Form/ShippingMethod.html
+++ b/Resources/Private/Partials/Foundation/Cart/Form/ShippingMethod.html
@@ -1,7 +1,10 @@
 {namespace cart=Extcode\Cart\ViewHelpers}
 
 <div id="shipping-method" class="form-block">
-    <h5 class="form-title"><span class="num">2</span><span>Versandart </span></h5>
+    <h5 class="form-title">
+        <span class="num">2</span>
+        <span><f:translate key="tx_cart.controller.order.action.show_cart.block-header.shipping_method"/></span>
+    </h5>
 
     <div class="form-content">
         <fieldset>
