[TASK] #1195 - add some documentation

--- a/Resources/Private/Backend/Partials/Order/Show/Cart.html
+++ b/Resources/Private/Backend/Partials/Order/Show/Cart.html
@@ -3,35 +3,35 @@
     <tr class="t3-row-header">
         <th width="100px">
             <f:translate
-                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xml:tx_cart_domain_model_order_product.sku"/>
+                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.sku"/>
         </th>
         <th width="300px">
             <f:translate
-                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xml:tx_cart_domain_model_order_product.title"/>
+                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.title"/>
         </th>
         <th width="100px">
             <f:translate
-                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xml:tx_cart_domain_model_order_product.price"/>
+                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.price"/>
         </th>
         <th width="100px">
             <f:translate
-                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xml:tx_cart_domain_model_order_product.discount"/>
+                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.discount"/>
         </th>
         <th width="100px">
             <f:translate
-                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xml:tx_cart_domain_model_order_product.count"/>
+                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.count"/>
         </th>
         <th width="100px">
             <f:translate
-                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xml:tx_cart_domain_model_order_product.net"/>
+                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.net"/>
         </th>
         <th width="100px">
             <f:translate
-                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xml:tx_cart_domain_model_order_product.gross"/>
+                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.gross"/>
         </th>
         <f:for each="{orderItem.orderTotalTax}" as="orderTotalTax">
             <td width="100px">
-                <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xml:plugin.cart.product.tax"
+                <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:plugin.cart.product.tax"
                              arguments="{0: orderTotalTax.orderTaxClass.name}"/>
             </td>
         </f:for>
