--- a/Resources/Private/Backend/Partials/Order/Show/OrderTax.html
+++ b/Resources/Private/Backend/Partials/Order/Show/OrderTax.html
@@ -1,7 +1,7 @@
 {namespace cart=Extcode\Cart\ViewHelpers}
 
 <li>
-    <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xml:plugin.cart.product.tax"
+    <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:plugin.cart.product.tax"
                  arguments="{0: orderTax.orderTaxClass.name}"/>
     :
     <cart:format.currency>{orderTax.tax}</cart:format.currency>
