[TASK] #1196 - show product correct single price and discount in module order

--- a/Resources/Private/Partials/Default/Cart/CartForm.html
+++ b/Resources/Private/Partials/Default/Cart/CartForm.html
@@ -16,18 +16,17 @@
                     <thead>
                     <tr class="first last">
                         <th rowspan="1" colspan="2">
-                            <f:translate key="tx_cart_domain_model_order_product.title"/>
+                            <f:translate key="tx_cart_domain_model_product_product.title"/>
                         </th>
                         <th colspan="1" class="a-center">
-                            <f:translate key="tx_cart_domain_model_order_product.price"/>
+                            <f:translate key="tx_cart_domain_model_product_product.unit_price"/>
                         </th>
-
                         <th rowspan="1" class="a-center">
-                            <f:translate key="tx_cart_domain_model_order_product.quantity"/>
+                            <f:translate key="tx_cart_domain_model_product_product.count"/>
                         </th>
 
                         <th colspan="1" class="a-center">
-                            <f:translate key="tx_cart_domain_model_order_product.price_total"/>
+                            <f:translate key="tx_cart_domain_model_product_product.subtotal"/>
                         </th>
 
                         <th>
