--- a/Resources/Private/Partials/Default/Cart/ProductList.html
+++ b/Resources/Private/Partials/Default/Cart/ProductList.html
@@ -60,7 +60,7 @@
                     </p>
                 </td>
                 <td class="text-right">
-                    <cart:format.currency>{variant.priceCalculated}</cart:format.currency>
+                    <cart:format.currency>{variant.bestPriceCalculated}</cart:format.currency>
                 </td>
                 <td class="a-center">
                     <div class="qty-wrapper">
