[TASK] #1191 - fix some translation in templates

--- a/Resources/Private/Partials/Default/Mail/Cart.html
+++ b/Resources/Private/Partials/Default/Mail/Cart.html
@@ -15,7 +15,7 @@
         </th>
 
         <th rowspan="1" class="a-center">
-            <f:translate key="tx_cart_domain_model_order_product.quantity"/>
+            <f:translate key="tx_cart_domain_model_order_product.count"/>
         </th>
 
         <th colspan="1" class="a-center">
