--- a/Resources/Private/Partials/Default/Mail/Summary.html
+++ b/Resources/Private/Partials/Default/Mail/Summary.html
@@ -3,7 +3,7 @@
 <tr class="first">
     <td colspan="4" style="text-align: right;">
         <f:translate
-                key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.cart_net"/>
+                key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_cart_cart.net"/>
     </td>
     <td style="text-align: right;" class="last">
         <span class="price">
@@ -14,7 +14,7 @@
 <tr>
     <td colspan="4" style="text-align: right;">
         <f:translate
-                key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.cart_gross"/>
+                key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_cart_cart.gross"/>
     </td>
     <td style="text-align: right;" class="last">
         <span class="price">
