--- a/Resources/Private/Partials/Default/Cart/Summary.html
+++ b/Resources/Private/Partials/Default/Cart/Summary.html
@@ -3,7 +3,7 @@
 <f:if condition="{settings.showCartAction.summary.fields.cart.net}">
     <tr class="first">
         <td colspan="3" class="a-right">
-            <f:translate key="tx_cart_domain_model_order_product.cart_net"/>
+            <f:translate key="tx_cart_domain_model_cart_cart.net"/>
         </td>
         <td class="a-right last">
             <span class="price">
@@ -15,7 +15,7 @@
 <f:if condition="{settings.showCartAction.summary.fields.cart.gross}">
     <tr>
         <td colspan="3" class="a-right">
-            <f:translate key="tx_cart_domain_model_order_product.cart_gross"/>
+            <f:translate key="tx_cart_domain_model_cart_cart.gross"/>
         </td>
         <td class="a-right last">
             <span class="price">
